update the ui and string

--- a/res/layout/getphone.xml
+++ b/res/layout/getphone.xml
@@ -9,7 +9,7 @@ xmlns:android="http://schemas.android.com/apk/res/android"
 android:id="@+id/yourphone"
 android:layout_width="180px"
 android:layout_height="wrap_content"
-android:text="1"
+android:text="@string/yourphonenum"
 android:textSize="18sp"
 android:layout_x="68px"
 android:layout_y="64px"
@@ -19,7 +19,7 @@ android:layout_y="64px"
 android:id="@+id/widget33"
 android:layout_width="wrap_content"
 android:layout_height="wrap_content"
-android:text="phone:"
+android:text="@string/yourphonelabel"
 android:layout_x="9px"
 android:layout_y="73px"
 >
@@ -28,7 +28,7 @@ android:layout_y="73px"
 android:id="@+id/widget34"
 android:layout_width="wrap_content"
 android:layout_height="wrap_content"
-android:text="submit"
+android:text="@string/yourphonebutton"
 android:layout_x="255px"
 android:layout_y="63px"
 >
